Fixed #118 Added config-first workflow section, precedence table mapping CLI flags to TOML keys, and a CI override example.